--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <hr>
 <H1>Work Experience</H1>
 <h2>TD Bank, Teller</h2>
-<h3>Work at TD bank as a banker, make cash payments, transfers and deposits</h3>
+<h3>Work at TD Bank as a banker, making cash payments, transfers and deposits</h3>
 <hr/>
 <hr>
 <h1>Acheivments</h1>
@@ -38,6 +38,6 @@
 <hr>
 <h1>Favourite courses</h1>
 <h2>ITM305</h2>
-<h3>In this course we learned about the system dev life cycle, the reason I like this course is because it offers the most hands on work style teaching method</h3>
+<h3>In this course we learned about the system dev life cycle, the reason I like this course is because it offers the most hands-on work style teaching method</h3>
 <hr/>
 <a href="https://www.linkedin.com/in/samika-bhusal/">Look at my linkedIn</a>
