--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </ul>
 <hr/>
 <hr>
-<h1>Strongest sills</h1>
+<h1>Strongest skills</h1>
 <ol type="1">
 <li>Puntuality</li>
 <li>Teamwork</li>
@@ -43,3 +43,4 @@
 <h3>In this course we learned about the system dev life cycle, the reason I like this course is because it offers the most hands-on work style teaching method</h3>
 <hr/>
 <a href="https://www.linkedin.com/in/samika-bhusal/">Look at my linkedIn</a>
+
