--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
+<link rel="stylesheet" herf="style.css">
 <Title>Samika CV</Title>
 <h1>Samika CV</h1>
 <hr>
 <H1>Education</H1>
 <hr/>
 <hr>
-<h2>Toronto Metropolitan University</h2>
-<h3>Bachelors of Business Technology Management</h3>
-
 <h2>Erindale Secondary School</h2>
 <h3>OSSGD</h3>
 <hr>
