--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" herf="style.css">
 <Title>Samika CV</Title>
 <h1>Samika CV</h1>
+<body>
 <hr>
 <H1>Education</H1>
 <hr/>
@@ -41,4 +42,5 @@
 <h3>In this course we learned about the system dev life cycle, the reason I like this course is because it offers the most hands-on work style teaching method</h3>
 <hr/>
 <a href="https://www.linkedin.com/in/samika-bhusal/">Look at my linkedIn</a>
+</body>
 
