--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<html lang 'en'>
+    <head>
+        <meta charset="utf-8">
+    </head>
 <link rel="stylesheet" herf="style.css">
 <Title>Samika CV</Title>
 <h1>Samika CV</h1>
