--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <Title>Samika CV</Title>
-        <link rel="stylesheet" herf="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
 <body>
