--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <hr/>
 <hr>
 <h2>Strongest skills</h2>
-
+<p>
 <ol type="1">
 <li>Puntuality</li>
 <li>Teamwork</li>
@@ -50,7 +50,7 @@
 <h2>Favourite courses</h2>
 <h3>ITM305</h3>
 <p> 
-<h4>In this course we learned about the system dev life cycle, the reason I like this course is because it offers the most hands-on work style teaching method</h4>
+In this course we learned about the system dev life cycle, the reason I like this course is because it offers the most hands-on work style teaching method
 </p>
 <hr/>
 <a href="https://www.linkedin.com/in/samika-bhusal/">Look at my linkedIn</a>
