--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <H2>Work Experience</H2>
 <h3>TD Bank, Teller</h3>
 <p> 
-<h4>Work at TD Bank as a banker, making cash payments, transfers and deposits</h3>
+Work at TD Bank as a banker, making cash payments, transfers and deposits</h3>
 </p>
 <hr/>
 <hr>
@@ -28,12 +28,12 @@
 <hr>
 <H2>Hobbies</H2>
 <p>
-<ul>
-    <li>Crotching</li>
-    <li>Knitting</li>
-    <li>Embroiding</li>
-    <li>Painting</li>
-</ul>
+    <ul>
+        <li>Crotching</li>
+        <li>Knitting</li>
+        <li>Embroiding</li>
+        <li>Painting</li>
+    </ul>
 </p>
 <hr/>
 <hr>
