--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@ Work at TD Bank as a banker, making cash payments, transfers and deposits</h3>
 <hr>
 <H2>Hobbies</H2>
  <ul>
-    <p>
-        <li>Crotching</li>
-        <li>Knitting</li>
-        <li>Embroiding</li>
-        <li>Painting</li>
-    </p>
+    <p><li>Crotching</li></p>
+    <p><li>Knitting</li></p>
+    <p><li>Embroiding</li></p>
+    <p><li>Painting</li></p>
  </ul>
 
 <hr/>
