--- a/index.html
+++ b/index.html
@@ -28,22 +28,19 @@ Work at TD Bank as a banker, making cash payments, transfers and deposits</h3>
 <hr>
 <H2>Hobbies</H2>
  <ul>
-    <p><li>Crotching</li></p>
-    <p><li>Knitting</li></p>
-    <p><li>Embroiding</li></p>
-    <p><li>Painting</li></p>
+    <li>Crotching</li>
+    <li>Knitting</li>
+    <li>Embroiding</li>
+    <li>Painting</li>
  </ul>
-
 <hr/>
 <hr>
 <h2>Strongest skills</h2>
-<p>
-<ol type="1">
-<li>Puntuality</li>
-<li>Teamwork</li>
-<li>Detail Oriented</li>
-</ol>
-</p>
+    <ol type="1">
+        <li>Puntuality</li>
+        <li>Teamwork</li>
+     <li>Detail Oriented</li>
+    </ol>
 <hr/>
 <hr>
 <h2>Favourite courses</h2>
