--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <H2>Work Experience</H2>
 <h3>TD Bank, Teller</h3>
 <p> 
-Work at TD Bank as a CEA (Customer Experiance Associate). My responisbilities consists of making basice transaction such as cash payments, transfers, and deposits, as well as aid customer with any concerns and enquirys.</h3>
+Work at TD Bank as a CEA (Customer Experiance Associate). My responsibilities consists of making financial transaction such as payments, transfers, and deposits. My positation allowes me to aid customers with any of their concerns and enquiries about their banking .</h3>
 </p>
 <hr/>
 <hr>
