--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <H2>Work Experience</H2>
 <h3>TD Bank, Teller</h3>
 <p> 
-Work at TD Bank as a CEA (Customer Experiance Associate). My responsibilities consists of making financial transaction such as payments, transfers, and deposits. My positation allowes me to aid customers with any of their concerns and enquiries about their banking .</h3>
+Work at TD Bank as a CEA (Customer Experiance Associate). My responsibilities consists of making financial transaction such as payments, transfers, and deposits. Offering personalized solutions to customer needs and concers, while prioritizing confidentiality is very important aspect of my position.</h3>
 </p>
 <hr/>
 <hr>
