--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <h2>Favourite courses</h2>
 <h3>ITM305</h3>
 <p> 
-    This course focused on teaching students about system development life cycle. It offered a hands-on work style teaching method, which added on the the overall learning experiance.
+    This course focused on teaching students about system development life cycle. It offered a hands-on work style teaching method, which adds on the overall learning experiance.
 </p>
 <hr/>
 <a href="https://www.linkedin.com/in/samika-bhusal/">Look at my linkedIn</a>
