--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     This course focused on teaching students about system development life cycle. It offered a hands-on work style teaching method, which adds on the overall learning experiance.
 </p>
 <hr/>
-<a href="https://www.linkedin.com/in/samika-bhusal/">Look at my linkedIn</a>
+<a>:"https://www.linkedin.com/in/samika-bhusal/">Look at my linkedIn</a>
 <a>:"https://haniamemon.wixsite.com/paintbrush-pals"</a>
 <hr>
 <hr/>
