--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     This course focused on teaching students about system development life cycle. It offered a hands-on work style teaching method, which adds on the overall learning experiance.
 </p>
 <hr/>
-<a href= "//www.linkedin.com/in/samika-bhusal/">//www.linkedin.com/in/samika-bhusal/</a>
+<a href= "https://www.linkedin.com/in/samika-bhusal/">https://www.linkedin.com/in/samika-bhusal/</a>
 <br>
-<a>https://haniamemon.wixsite.com/paintbrush-pals</a>
+<a href= "https://haniamemon.wixsite.com/paintbrush-pals">https://haniamemon.wixsite.com/paintbrush-pals"</a>
 <hr>
 <hr/>
 </body>
