--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <hr/>
 <a href= "https://www.linkedin.com/in/samika-bhusal/">https://www.linkedin.com/in/samika-bhusal/</a>
 <br>
-<a href= "https://haniamemon.wixsite.com/paintbrush-pals">https://haniamemon.wixsite.com/paintbrush-pals"</a>
+<a href= "https://haniamemon.wixsite.com/paintbrush-pals">https://haniamemon.wixsite.com/paintbrush-pals</a>
 <hr>
 <hr/>
 </body>
