--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <hr>
 <H2>Hobbies</H2>
  <ul>
-    <li>Crotching</li>
+    <li>Crocheting</li>
     <li>Knitting</li>
     <li>Embroiding</li>
     <li>Painting</li>
