--- a/index.html
+++ b/index.html
@@ -49,14 +49,17 @@
     This course focused on teaching students about system development life cycle. It offered a hands-on work style teaching method, which adds on the overall learning experiance.
 </p>
 <hr/>
-<table>
-    <tbody>
-        <div class="links"
-        <a href= "https://www.linkedin.com/in/samika-bhusal/">https://www.linkedin.com/in/samika-bhusal/</a>
-    </tbody>
-<br>
-<a href= "https://haniamemon.wixsite.com/paintbrush-pals">https://haniamemon.wixsite.com/paintbrush-pals</a>
-</table>
+    <div class="table">
+        <div class="row"> 
+          <div class="link"><a href="https://www.linkedin.com/in/samika-bhusal/">LinkedIn</a></div>
+          <div class="description">LinkedIn Profile</div>
+        </div>
+        <div class="row">
+          <div class="link"><a href="https://haniamemon.wixsite.com/paintbrush-pals" > Paintbrush Pal</a></div>
+          <div class="description">Art Protfolio </div>
+        </div>
+      </div>
+
 <hr>
 <hr/>
 </body>
