--- a/index.html
+++ b/index.html
@@ -49,16 +49,18 @@
     This course focused on teaching students about system development life cycle. It offered a hands-on work style teaching method, which adds on the overall learning experiance.
 </p>
 <hr/>
-    <div class="table">
-        <div class="row"> 
-          <div class="link"><a href="https://www.linkedin.com/in/samika-bhusal/">LinkedIn</a></div>
-          <div class="description">LinkedIn Profile</div>
-        </div>
-        <div class="row">
-          <div class="link"><a href="https://haniamemon.wixsite.com/paintbrush-pals" > Paintbrush Pal</a></div>
-          <div class="description">Art Protfolio </div>
-        </div>
-      </div>
+
+<table>
+    <tr>
+        <td> <div class="links"> <a href="https://github.com/haniamemon"> https://github.com/haniamemon</a></div> </td>
+        <td><div class="desc"><h3>See my GitHub here!</h3></div></td> 
+    </tr>
+    
+    <tr>
+        <td> <div class="links"> <a href="https://www.linkedin.com/in/hania-i-memon/">https://www.linkedin.com/in/hania-i-memon/ </a>  </div> </td>
+        <td><div class= "desc"> <h3> See my LinkedIn here! </h3></div></td>
+    </tr>
+    </table>
 
 <hr>
 <hr/>
