--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
 
 <table>
     <tr>
-        <td> <div class="links"> <a href="https://github.com/haniamemon"> https://github.com/haniamemon</a></div> </td>
-        <td><div class="desc"><h3>See my GitHub here!</h3></div></td> 
+        <td> <div class="links"> <a href="https://haniamemon.wixsite.com/paintbrush-pals"> PaintBrush Pals</a></div> </td>
+        <td><div class="desc"><h4> Art Portfolio! </h4></div></td> 
     </tr>
     
     <tr>
-        <td> <div class="links"> <a href="https://www.linkedin.com/in/hania-i-memon/">https://www.linkedin.com/in/hania-i-memon/ </a>  </div> </td>
-        <td><div class= "desc"> <h3> See my LinkedIn here! </h3></div></td>
+        <td> <div class="links"> <a href="https://www.linkedin.com/in/samika-bhusal/">LinkedIn </a>  </div> </td>
+        <td><div class= "desc"> <h4> LinkedIn Profile! </h4></div></td>
     </tr>
-    </table>
+    </table>/
 
 <hr>
 <hr/>
