--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <td> <div class="links"> <a href="https://www.linkedin.com/in/samika-bhusal/">LinkedIn </a>  </div> </td>
         <td><div class= "desc"> <h4> LinkedIn Profile! </h4></div></td>
     </tr>
-    </table>/
+    </table>
 
 <hr>
 <hr/>
