--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <Title>Samika CV</Title>
         <link rel="stylesheet" href="style.css">
+        <script src= "main.js"></script>
     </head>
 
 <body>
