--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
         <script src= "main.js"></script>
     </head>
 
+
 <body>
 <h1>Samika Bhusal</h1>
-
 <hr>
+<hr>
+<button onclick="myFunction()">Enter Name</button>
 <H2>Education</H2>
 <h3>Erindale Secondary School</h3>
 <h4>OSSGD</h4>
