--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <h1>Samika Bhusal</h1>
 <hr>
 <hr>
-<button onclick="myFunction()">Enter Name</button>
+<button onclick="myFunction()"> click me!</button>
+<hr>
 <H2>Education</H2>
 <h3>Erindale Secondary School</h3>
 <h4>OSSGD</h4>
