--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <h1>Samika Bhusal</h1>
 <hr>
 <hr>
+<div id="greeting"></div>
 <button onclick="myFunction()"> click me!</button>
 <hr>
 <H2>Education</H2>
