--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <h1>Samika Bhusal</h1>
 <hr>
+<img src="Images/mepic.png">
 <hr>
 <div id="greeting"></div>
 <button onclick="myFunction()"> click me!</button>
