--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Samika Bhusal</h1>
 <hr>
-<img src="Images/mepic.png"  height="200"  id="img">
+<img src="Images/mepic.png"  height="200" width="100" id="img">
 <hr>
 <div id="greeting"></div>
 <button onclick="myFunction()"> click me!</button>
