--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Samika Bhusal</h1>
 <hr>
-<img src="/Users/samika/Documents/GitHub/samikab.github.io/Images/mepic.png"  height="600" width="300" id="img">
+<img src="mepic.png"  height="600" width="300" id="img">
 <hr>
 <div id="greeting"></div>
 <button onclick="myFunction()"> click me!</button>
