--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 <body>
 <h1>Samika Bhusal</h1>
-<hr>
-<img src="mepic.png";  height="600"; width="300" ;id="img";>
+
+<img src="images/Meee.png"  height="600" width="450" id="Pic" onclick="ChangeImageSize()">
 <hr>
 <div id="greeting"></div>
 <button onclick="myFunction()"> click me!</button>
+
+<main> 
 <hr>
 <H2>Education</H2>
 <h3>Erindale Secondary School</h3>
@@ -27,6 +29,7 @@
  I work as a CEA (Customer Experiance Associate) within TD Bank. My responsibilities consists of making financial transaction such as payments, transfers, and deposits. Offering personalized solutions to customer needs and concers, while prioritizing confidentiality is very important aspect of my position.</h3>
 </p>
 <hr/>
+</main>
 <hr>
 <h2>Acheivments</h2>
 <h3>Honours of OSSGD</h3>
