--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          <a href="Experience.html">Experience</a>
        </div>
      </div>
-     <div class="menu"><`a href="Contact.html">Contact</a></div>
+     <div class="menu"><a href="Contact.html">Contact</a></div>
     </nav>
 </div>
 
