--- a/Contact.html
+++ b/Contact.html
@@ -1,3 +1,44 @@
-<form>
-    Form elements
-    </form>
+<h3>Please fill out information below<h3>
+
+    <form id="myform">
+       <p>
+           <label for="Name">Name</label>
+           <input id="name" type="text">
+       </p>
+       <p>
+           <label for="Email">Email</label>
+           <input id="email" type="text">
+       </p>
+       <p>
+           <label for="Phone">Phone</label>
+           <input id="phone" type="tel">
+           <select id="phone_type">
+               <option value="home">Home</option>
+               <option value="mobile">Mobile</option>
+               <option value ="fax">Fax</option>
+           </select>
+       </p>
+     <p>
+         <label>Gender:</label><br>
+         <input type="radio" name="gender" id="male" value="Male">
+         <label for="male">Male</label>
+         <input type="radio" name="gender" id="female" value="Female">
+         <label for="female">Female</label>
+         <input type="radio" name="gender" id="preferNotToSay" value="Prefer not to say">
+         <label for="preferNotToSay">Prefer not to say</label>
+     </p>
+     
+       <p>
+           <label>Industry of Work:</label><br>
+           <input type="checkbox" name="industry" value="Technology">
+           <label for="industry">Technology</label><br>
+           <input type="checkbox" name="industry" value="Finance">
+           <label for="industry">Finance</label><br>
+           <input type="checkbox" name="industry" value="Healthcare">
+           <label for="industry">Healthcare</label><br>
+           <input type="checkbox" name="industry" value="Marketing">
+           <label for="industry">Marketing</label><br>
+           <input type="checkbox" name="industry" value="Other">
+           <label for="industry">Other</label><br>
+
+           
