--- a/Contact.html
+++ b/Contact.html
@@ -41,4 +41,17 @@
            <input type="checkbox" name="industry" value="Other">
            <label for="industry">Other</label><br>
 
-           
+        </p>
+
+        <p>
+            <label for="Message">Message</label>
+        </p>
+        <p>
+            <textarea id="message" name="message" rows="5" cols="50" placeholder="Enter your message"></textarea>
+        </p>
+        <p>
+          <button type="button" value="submit" onclick="submitForm()">Submit</button>
+          <input type="reset">
+        </p>
+        </form>
+    
