--- a/Contact.html
+++ b/Contact.html
@@ -24,6 +24,8 @@
          <label for="male">Male</label>
          <input type="radio" name="gender" id="female" value="Female">
          <label for="female">Female</label>
+         <input type="radio" name="gender" id="Other" value="Other">
+         <label for="Other">Other</label>
          <input type="radio" name="gender" id="preferNotToSay" value="Prefer not to say">
          <label for="preferNotToSay">Prefer not to say</label>
      </p>
