--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,16 @@
-<h3>Please fill out information below<h3>
+<link rel="stylesheet" href="style.css">
+        <script src= "main.js"></script>
+
+<H3>My contact: </H3>
+    <h4>Gmail: samika.bhusal@torontomu.ca</h4>
+    <h4>Tel: 905-999-9999</h4>
+<hr>
+
+
+<h4>Please fill out information below!</h4>
 
     <form id="myform">
-       <p>
+        <p>
            <label for="Name">Name</label>
            <input id="name" type="text">
        </p>
@@ -19,7 +28,7 @@
            </select>
        </p>
      <p>
-         <label>Gender:</label><br>
+        <label>Gender:</label><br>
          <input type="radio" name="gender" id="male" value="Male">
          <label for="male">Male</label>
          <input type="radio" name="gender" id="female" value="Female">
@@ -31,25 +40,43 @@
      </p>
      
        <p>
-           <label>Industry of Work:</label><br>
-           <input type="checkbox" name="industry" value="Technology">
-           <label for="industry">Technology</label><br>
-           <input type="checkbox" name="industry" value="Finance">
-           <label for="industry">Finance</label><br>
-           <input type="checkbox" name="industry" value="Healthcare">
-           <label for="industry">Healthcare</label><br>
-           <input type="checkbox" name="industry" value="Marketing">
-           <label for="industry">Marketing</label><br>
-           <input type="checkbox" name="industry" value="Other">
-           <label for="industry">Other</label><br>
+          <label>In your opinion, what is the most importent aspect in a professional website?:</label><br>
+           <input type="checkbox" name="aspect" value="Education">
+           <label for="aspect">Education</label><br>
+           <input type="checkbox" name="aspect" value="Hobbies">
+           <label for="aspect">Hobbies</label><br>
+           <input type="checkbox" name="aspect" value="Extracurrciulars">
+           <label for="aspect">Extracurrciulars</label><br>
+           <input type="checkbox" name="aspect" value="Work/Project Experiance">
+           <label for="aspect">Work/Project Experiance</label><br>
+           <input type="checkbox" name="aspect" value="Other">
+           <label for="aspect">Other</label>
+             <input id="Other" type="text">
+             <br>
 
         </p>
 
+
         <p>
-            <label for="Message">Message</label>
+
+
+            <label>Please select the colour that represents professionalism in your opinion</label>
+            <input type="color" name="colour" value="#8a4261" id="colorpicker">
+          </p>
+
+
+          <h4> Please Rate my website:  </h4>
+          <div class="slider">
+            <input type="range" min="0" max="10" value="5" oninput="rangeValue.innerText = this.value">
+            <p id="rangeValue">5</p>   
+          </div>   
+
+
+        <p>
+            <label for="Please give any design feedback for my website">Please give any design feedback for my website</label>
         </p>
         <p>
-            <textarea id="message" name="message" rows="5" cols="50" placeholder="Enter your message"></textarea>
+            <textarea id="Feedback" name="Feedback" rows="5" cols="50" placeholder="Enter your feedback"></textarea>
         </p>
         <p>
           <button type="button" value="submit" onclick="submitForm()">Submit</button>
